Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -68,8 +68,6 @@ body.edit { /* border for logo on editor */
             }
         }
         ul {
-            display: table;
-            float: none;
             margin: 0 auto;
             text-align: center;
             padding: 4px 0 0 0;
